--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             
             <div class="event-details">
                 <p class="detail-line">Thứ Sáu, ngày 09 tháng 01, 2026</p>
-                <p class="detail-line">lúc 9 giờ sáng</p>
+                <p class="detail-line">lúc 9 giờ 30 phút sáng</p>
                 <p class="detail-line venue">TẠI THU DUC CAMPUS</p>
                 <p class="detail-line">Trường Đại học Công Nghệ TP.HCM (HUTECH)</p>
                 <p class="detail-line">Phân khu đào tạo E1, Khu Công Nghệ cao TP.HCM, Phường Tăng Nhơn Phú, TP.HCM</p>
@@ -84,7 +84,7 @@
         <div class="modal-content success-modal">
             <div class="success-icon">✓</div>
             <h2 class="modal-title">Cảm ơn bạn!</h2>
-            <p class="success-message">Xác nhận của bạn đã được ghi nhận.<br>Email xác nhận đã được gửi đến hộp thư của bạn.</p>
+            <p class="success-message">Xác nhận của bạn đã được ghi nhận.<br>Email xác nhận đã được gửi đến hộp thư của bạn.<br>Vui lòng kiểm tra hộp thư rác hoặc thư mục spam nếu không thấy thông báo được gửi đến nhé.</p>
             <button class="submit-btn" onclick="closeSuccessModal()">ĐÓNG</button>
         </div>
     </div>
